# aitools

./: README.md
TDClient/: .gitignore  CMakeLists.txt
TDClient/Scripts/: compiler_sa9000.sh  fp16.sh
TDClient/TDClient/: CMakeLists.txt  main.cpp
TDClient/TDClientLib/: CMakeLists.txt  TaskDealer.cpp  TaskDealer.h  curlfunc.hpp
docs/: CreateApplicaton.txt  Database.txt  HighPerformanceDeployPlatform.pptx
docs/SystemArchitecture/: components.excalidraw  sys_topology.excalidraw  target_flow.excalidraw  targets.excalidraw
go-admin/: go.sum
go-admin-ui/: .env.development  package-lock.json
go-admin-ui/src/api/admin/: article.js  model-compile-apply.js
go-admin-ui/src/views/admin/article/: index.vue
go-admin-ui/src/views/admin/model-compile-apply/: index.vue
go-admin-ui/src/views/dashboard/admin/: index.vue
go-admin-ui/src/views/login/: index.vue
go-admin/app/admin/apis/: model_compile_apply.go
go-admin/app/admin/models/: article.go  model_compile_apply.go
go-admin/app/admin/router/: model_compile_apply.go
go-admin/app/admin/service/: model_compile_apply.go
go-admin/app/admin/service/dto/: article.go  model_compile_apply.go
go-admin/app/myapp/apis/: test1.go
go-admin/app/myapp/router/: router.go  test1.go
go-admin/cmd/api/: myapp.go
go-admin/common/middleware/: permission.go
go-admin/config/: settings.yml
